# tdom_sphinx

./: .gitignore  CLAUDE.md  Justfile  README.md  conftest.py  pyproject.toml  tdom_safe_demo.py  tdom_safe_implementation_plan.md  tdom_testing_library_plan.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: conf.py  index.md
docs/examples/components/: hello.md
src/tdom_sphinx/: __init__.py  components.py  convert.py  fixtures.py  layouts.py  models.py  sphinx_events.py  template_bridge.py  theme_config.py  url.py  utils.py  views.py  xxxcomponents.py
src/tdom_sphinx/aria_testing/: __init__.py  errors.py  example.py  implicit_roles_summary.md  queries.py  utils.py
src/tdom_sphinx/components/: base_layout.py  base_layouts_test.py  footer.py  footer_test.py  head.py  head_test.py  header.py  header_test.py  heading.py  heading_test.py  main.py  main_test.py  navbar.py  navbar_brand.py  navbar_brand_logo.py  navbar_brand_logo_test.py  navbar_brand_test.py  navbar_end.py  navbar_end_button.py  navbar_end_icon.py  navbar_links.py  navbar_links_test.py  navbar_more.py  navbar_more_link.py  navbar_start.py  title.py  (+5 more)
tests/: conftest.py  test_basic_sphinx.py  test_components.py  test_fixtures.py  test_html_page_context.py  test_htpy_decorator.py  test_layouts.py  test_make_page_context.py  test_navbar_sphinx.py  test_sphinx_events.py  test_template_bridge.py  test_txslt.py  test_url.py  test_utils.py  test_views.py
tests/aria_testing/: test_aria_testing_errors.py  test_aria_testing_queries.py  test_aria_utils.py  test_implicit_roles.py  test_label_text.py
(+22 files in other folders)
