[project]
name = "tdom-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "pauleveritt@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "sphinx>=8.2.3",
    "tdom"
]

[tool.uv.sources]
tdom = { path = "../tdom" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "htpy>=25.8.1",
    "markupsafe>=3.0.2",
    "pytest>=8.4.2",
]
