[project]
name = "tdom-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pauleveritt", email = "pauleveritt@me.com" }
]
requires-python = ">=3.14"
dependencies = [
    "sphinx>=8.2.3",
    "tdom",
]


[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["*_test.py", "test_*.py"]
addopts = "-p no:doctest"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "htpy>=25.8.1",
    "markupsafe>=3.0.2",
    "myst-parser>=4.0.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "sphinx-autobuild>=2024.4.11",
]
